commit2 - login 기본 세팅

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -11,7 +11,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create    # ???? table? ????
+      ddl-auto: update    # ???? table? ????
     properties:
       hibernate:
         #        show_sql: true    # ?????? ???? ???, logger? ?? ?? (system.out?? ???)
