--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -14,8 +14,8 @@ spring:
       ddl-auto: update    # ???? table? ????
     properties:
       hibernate:
-        #        show_sql: true    # ?????? ???? ???, logger? ?? ?? (system.out?? ???)
-        format_sql: true
+        #show_sql: true    # ?????? ???? ???, logger? ?? ?? (system.out?? ???)
+        #format_sql: true
 
 logging.level:
   org.hibernate.SQL: debug
