--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,9 @@ dependencies {
 
 	// security in thymeleaf
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+
+	// Spring Boot Starter for sending emails
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
