commit 80 : properties 암호화

--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,9 @@ dependencies {
 
 	// Spring Boot Starter for sending emails
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+	// properties 암호화
+	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
 }
 
 tasks.named('test') {
