--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,12 +31,25 @@ spring:
             authorization-grant-type: authorization_code
             scope: profile_nickname, account_email #동의 항목
             client-name: Kakao
+          naver:
+            client-id: ENC(SiBXV66ixOgvP5Yqg8IQ0NuMjy0z1MTi94lLWtB9t/c=)
+            client-secret: ENC(eBH+5rK++38sv0MLo8UnEDb7YwC356YL)
+            redirect-uri: "{baseUrl}/{action}/oauth2/code/{registrationId}"
+            client-authentication-method: POST
+            authorization-grant-type: authorization_code
+            scope: name, email
+            client-name: Naver
         provider:
           kakao:
             authorization_uri: https://kauth.kakao.com/oauth/authorize
             token_uri: https://kauth.kakao.com/oauth/token
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user_name_attribute: id
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
   data:
     web:
       pageable:
