commit 179 : img, ckImg path yml에 정의

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -35,3 +35,10 @@ logging.level:
 jasypt:
   encryptor:
     bean: jasyptStringEncryptor
+
+hong:
+  img:
+    path: 'D:\hongFile\'
+  ckImg:
+    pattern: '/ckImage/**'
+    path: 'D:/hongFile/ckImage/'
